--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha --compilers js:babel-register --watch-extensions js,jsx tests/**/*.test.js",
     "build": "webpack",
     "start": "node server",
-    "start-dev": "webpack -w & NODE_ENV=development nodemon ./server --watch server",
+    "start-dev": "NODE_ENV=development webpack & NODE_ENV=development nodemon ./server --watch server",
     "start-prod": "NODE_ENV=production npm run build && npm run start"
   },
   "keywords": [],
@@ -37,17 +37,34 @@
     "sequelize": "^4.3.2"
   },
   "devDependencies": {
+    "@types/react": "^16.0.7",
+    "@types/react-redux": "^5.0.9",
+    "awesome-typescript-loader": "^3.2.3",
     "babel-core": "^6.25.0",
+    "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
     "chai": "^4.1.0",
     "compression-webpack-plugin": "^1.0.0",
     "enzyme": "^3.0.0",
+    "eslint": "^4.12.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-import-resolver-webpack": "^0.8.3",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.5.1",
     "mocha": "^3.4.2",
+    "react-hot-loader": "^3.1.3",
     "supertest": "^3.0.0",
+    "typescript": "^2.5.3",
     "webpack": "^3.2.0",
-    "webpack-livereload-plugin": "^1.0.0"
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-hot-middleware": "^2.21.0",
+    "webpack-livereload-plugin": "^1.0.0",
+    "webpack-merge": "^4.1.1"
   }
 }
