--- a/package.json
+++ b/package.json
@@ -4,27 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-register --watch-extensions js,jsx tests/**/*.test.js",
-    "build": "webpack",
+    "test": "mocha --compilers --watch-extensions js,jsx tests/**/*.test.js",
+    "build-prod": "NODE_ENV=production webpack",
+    "build-dev": "NODE_ENV=development webpack",
     "start": "node server",
-    "start-dev": "NODE_ENV=development webpack & NODE_ENV=development nodemon ./server --watch server",
-    "start-prod": "NODE_ENV=production npm run build && npm run start"
+    "start-dev": "npm run build-dev & NODE_ENV=development nodemon ./server --watch server",
+    "start-prod": "npm run build-prod & NODE_ENV=production npm run start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.17.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "connect-session-sequelize": "^4.1.0",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
-    "history": "^4.6.3",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "pg": "^6.4.1",
+    "prop-types": "^15.6.0",
+    "query-string": "^5.0.1",
+    "ramda": "^0.25.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.5",
@@ -37,9 +41,6 @@
     "sequelize": "^4.3.2"
   },
   "devDependencies": {
-    "@types/react": "^16.0.7",
-    "@types/react-redux": "^5.0.9",
-    "awesome-typescript-loader": "^3.2.3",
     "babel-core": "^6.25.0",
     "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.1",
@@ -47,7 +48,6 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.24.1",
     "chai": "^4.1.0",
     "compression-webpack-plugin": "^1.0.0",
     "enzyme": "^3.0.0",
@@ -60,7 +60,6 @@
     "mocha": "^3.4.2",
     "react-hot-loader": "^3.1.3",
     "supertest": "^3.0.0",
-    "typescript": "^2.5.3",
     "webpack": "^3.2.0",
     "webpack-dev-middleware": "^1.12.2",
     "webpack-hot-middleware": "^2.21.0",
