--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "morgan": "^1.8.2",
+    "normalizr": "^3.2.4",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
@@ -38,7 +39,9 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "sequelize": "^4.3.2"
+    "semantic-ui-react": "^0.77.0",
+    "sequelize": "^4.3.2",
+    "styled-components": "^2.2.4"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
