--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.17.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
+    "camelize": "^1.0.0",
     "connect-session-sequelize": "^4.1.0",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
@@ -32,6 +33,7 @@
     "ramda": "^0.25.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-markdown": "^3.1.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
