--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "mocha --compilers --watch-extensions js,jsx tests/**/*.test.js",
     "build-prod": "NODE_ENV=production webpack",
     "build-dev": "NODE_ENV=development webpack",
-    "start": "node server",
-    "start-dev": "npm run build-dev & NODE_ENV=development nodemon ./server --watch server",
+    "start": "node ./server",
+    "start-dev": "npm run build-dev & NODE_ENV=development npm run start",
     "start-prod": "npm run build-prod & NODE_ENV=production npm run start"
   },
   "keywords": [],
@@ -36,6 +36,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.77.0",
+    "serialize-javascript": "^1.4.0",
     "styled-components": "^2.2.4"
   },
   "devDependencies": {
@@ -57,11 +58,13 @@
     "eslint-plugin-react": "^7.5.1",
     "mocha": "^3.4.2",
     "react-hot-loader": "^3.1.3",
+    "source-map-support": "^0.5.0",
     "supertest": "^3.0.0",
     "webpack": "^3.2.0",
     "webpack-dev-middleware": "^1.12.2",
     "webpack-hot-middleware": "^2.21.0",
     "webpack-livereload-plugin": "^1.0.0",
-    "webpack-merge": "^4.1.1"
+    "webpack-merge": "^4.1.1",
+    "webpack-node-externals": "^1.6.0"
   }
 }
